# qudit-simulator-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  expectation.cpp  expectation.hpp  pauli_operator.cpp  pauli_operator.hpp  qudit_state.cpp  qudit_state.hpp
tests/: CMakeLists.txt  test_expectation.cpp  test_pauli_operator.cpp  test_qudit_state.cpp
